tests/ui/const-generics/mgca/array-expr-complex.r3.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/array-expr-complex.rs:17:45
   |
LL |     takes_array::<{ core::direct_const_arg!([0; Y]) }>();
   |                                             ^^^^^^

error: aborting due to 1 previous error

